fix nav collapse

--- a/public/src/sass/pages/_bootstrap.scss
+++ b/public/src/sass/pages/_bootstrap.scss
@@ -20,14 +20,6 @@
   }
 }
 
-.navbar-collapse {
-  text-align: center;
-}
-
-.header .navbar .collapse {
-  margin-left: 0 !important;
-}
-
 .header .navbar .nav-item a {
   font-size: 1.1rem !important;
   padding: 6px;
